<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.EditRecipeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/smallPadding"
            android:layout_margin="@dimen/defaultDpMargin"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/rounded_grey_bg"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:id="@+id/recipe_image"
                    />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/upload_image_wrapper"
                    >
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_camera_alt"
                        android:id="@+id/upload_recipe_image_btn"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/eightDpMargin"
                        android:text="@string/attach_recipe_image"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_box_design"
                android:layout_marginTop="@dimen/defaultDpMargin"
                android:hint="@string/title"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/mediumTextSize" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:maxHeight="120dp"
                android:background="@drawable/text_input_box_design"
                android:layout_marginTop="@dimen/sixtyDpMargin"
                android:gravity="start"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/mediumTextSize" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:maxHeight="120dp"
                android:background="@drawable/text_input_box_design"
                android:layout_marginTop="@dimen/sixtyDpMargin"
                android:gravity="start"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:hint="@string/ingredients"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/mediumTextSize" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixtyDpMargin"
                android:text="@string/author_id"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/author_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_box_design"
                android:layout_marginTop="@dimen/defaultDpMargin"
                android:hint="@string/author_id"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/mediumTextSize" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixtyDpMargin"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_box_design"
                android:layout_marginTop="@dimen/defaultDpMargin"
                android:hint="@string/location"
                android:focusableInTouchMode="false"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/mediumTextSize" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thirtyTwoDpMargin"
                android:text="@string/update"
                android:textSize="@dimen/largeTextSize"
                app:backgroundTint="@color/primary" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>